[package]
name = "coocoo_compiler"
description = "a compiler for procedure texture generation"
version = "0.1.0"
authors = ["cheng su <chengsu6561@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[features]
# If you uncomment this line, it will enable `wee_alloc`:
#default = ["wee_alloc"]

[dependencies]
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = { version = "0.2.68", features = ["serde-serialize"] }
wat = "1.0.5"
wast = "4.0.0"
walrus = "0.18.0"
regex = "0.2.1"
lazy_static = "1.4.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
cfg-if = "1.0"
lalrpop-util = "0.17.2"

[build-dependencies] 
lalrpop = "0.17.2"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. However, it is slower than the default
# allocator, so it's not enabled by default.
wee_alloc = { version = "0.4.2", optional = true }

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.22"
features = ["console"]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.3.18"
futures = "0.1.27"
js-sys = "0.3.22"
wabt = "0.10.0"
wasm-bindgen-futures = "0.4.18"
wasmer = "1.0.0-alpha5"
wasmer-compiler-cranelift = "1.0.0-alpha5"
wasmer-engine-jit = "1.0.0-alpha5"
wasmer-runtime = "0.17.1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false